BM-000: adding more fields and some data to Person

--- a/src/main/kotlin/api/Person.yaml
+++ b/src/main/kotlin/api/Person.yaml
@@ -4,7 +4,7 @@ info:
   description: API to read and update the Person in this system
   version: 1.0.0
 servers:
-  - url: 'http://localhost:8080/api/v1'
+  - url: 'http://localhost:8088/api'
     description: 'Localhost for testing on your own device'
 paths:
   '/person':
